Arctic Wolf theme + enhanced shiny knobs - pre-Priority 1 features

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -47,6 +47,8 @@ target_sources(HowlingWolves
         Source/PresetBrowser.h
         Source/VisualizerComponent.cpp
         Source/VisualizerComponent.h
+        Source/CustomKnobLookAndFeel.cpp
+        Source/CustomKnobLookAndFeel.h
 )
 
 # Link against JUCE libraries
